<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green3"
    tools:context=".sign_in">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="20dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5sp"
        android:layout_marginTop="5dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/please_enter_your_sign_up_credentials"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <androidx.constraintlayout.widget.ConstraintLayout

        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cardmain"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12sp"
            android:layout_marginTop="50dp"
            android:hint="Username"
            android:textColorHint="@color/green2"
            app:hintTextAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/baseline_person_24"
            app:startIconTint="@color/green2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                style="@style/MyTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:labelFor="@+id/textInputLayout"
                android:textColor="@color/green2"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12sp"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            android:textColor="@color/green2"
            android:textColorHint="@color/green2"

            app:endIconTint="@color/green2"
            app:hintTextAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:startIconDrawable="@drawable/baseline_email_24"
            app:startIconTint="@color/green2"
            tools:layout_editor_absoluteX="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/upemail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:textColor="@color/green2"
                android:textColorHint="@color/green2"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12sp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            android:textColor="@color/green2"
            android:textColorHint="@color/green2"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/green2"
            app:hintTextAppearance="@style/TextAppearance.Material3.BodyMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:startIconDrawable="@drawable/baseline_password_24"
            app:startIconTint="@color/green2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:textColor="@color/green2"
                android:textColorHint="@color/green2"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckedTextView
            android:id="@+id/checkedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:drawableStart="?android:listChoiceIndicatorMultiple"
            android:drawableTint="@color/green2"
            android:fontFamily="sans-serif-medium"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/i_agree_to_the_t_c"
            android:textAllCaps="true"
            android:textColor="@color/green2"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout3"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            android:focusable="true" />

        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12sp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/blue"
            android:textSize="22sp"
            android:textStyle="bold"
            app:cornerRadius="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/checkedTextView" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>