<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green3"
    android:fillViewport="true"
    tools:context=".home">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/greet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/hello"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="35sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/green1"
            android:clickable="true"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/logout"
            android:textAllCaps="true"
            android:textSize="18sp"
            app:icon="@drawable/baseline_logout_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="35dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/cardsecond"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/greet">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="30dp"
                android:background="@drawable/inpuut"
                android:drawableStart="@drawable/baseline_drive_file_rename_outline_24"
                android:drawablePadding="12sp"
                android:drawableTint="@color/green3"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="@string/enter_link_name"
                android:inputType="textShortMessage"
                android:orientation="vertical"
                android:paddingStart="12sp"
                android:paddingTop="12sp"
                android:paddingBottom="4sp"
                android:textColor="@color/green3"
                android:textColorHint="@color/green3"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="15dp"
                android:background="@drawable/inpuut"
                android:drawableStart="@drawable/baseline_web_24"
                android:drawablePadding="12sp"
                android:drawableTint="@color/green3"
                android:fontFamily="sans-serif-smallcaps"
                android:hint="Enter url"
                android:orientation="vertical"
                android:paddingStart="12sp"
                android:paddingTop="12sp"
                android:paddingBottom="4sp"
                android:textColor="@color/green3"
                android:textColorHint="@color/green3"
                android:textSize="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <Button
                android:id="@+id/add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20sp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/add"
                android:textAllCaps="true"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold"
                app:cornerRadius="5sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main"
            class="androidx.appcompat.app.AlertController$RecycleListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
            tools:listitem="@layout/addview"
            tools:layout_editor_absoluteX="16dp">


        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>